--- a/CSS/tei.css
+++ b/CSS/tei.css
@@ -491,7 +491,7 @@ body > div > div > head {
     padding-bottom : 10px;
     padding-left : 10px;
     color : inherit;
-    background-color : #BBBBBB;
+/*    background-color : #BBBBBB;*/
     font-weight : bold;
     margin-bottom : 0.5em;
     margin-top : 11px;
@@ -502,7 +502,7 @@ body > div > div > div > head {
     padding-bottom : 10px;
     padding-left : 10px;
     color : inherit;
-    background-color : #BBBBBB;
+/*    background-color : #BBBBBB;*/
     font-weight : bold;
     margin-bottom : 0.5em;
     margin-top : 1em;
