Removed line numbering from line group

--- a/CSS/leaf.css
+++ b/CSS/leaf.css
@@ -655,7 +655,8 @@ l {
     display: block;
     white-space: nowrap;
 }
-lg l:after {
+/* DKJ 06/20/2025: hide line numbering for verse because it is distracting */
+/* lg l:after {
     counter-increment: line;
     content: counter(line);
     text-align: right;
@@ -663,6 +664,8 @@ lg l:after {
     color: silver;
     margin-right: 50px;
 }
+*/
+
 label {
     display: inline;
     font-weight: bold;
@@ -701,7 +704,8 @@ lb:before {
 lg {
     display: block;
     margin-bottom: 0.5em;
-    counter-reset: line;
+   /* DKJ 06/20/2025: counter-reset: 
+    * line; -- hiding counter*/
 }
 list {
     display: block;
@@ -843,7 +847,7 @@ notesStmt {
 num {
     display: inline;
 }
-/* DKJ 05/02/2023 structuring occupation display */
+/* DKJ 05/02/2023: structuring occupation display */
 occupation {
     display: block;
     margin-bottom: 0.5em;
@@ -1080,6 +1084,8 @@ div p {
     text-align : left;
     text-indent : 30px;
 }
+ */
+
 speaker {
     display: inline;
     font-weight: bold;
