--- a/CSS/leaf.css
+++ b/CSS/leaf.css
@@ -978,6 +978,11 @@ q:before {
 q:after {
     content: close-quote;
 }
+quote {
+    display: block;
+    margin-left: 1em;
+}
+
 ref {
     display: inline;
     color: blue;
