--- a/CSS/leaf.css
+++ b/CSS/leaf.css
@@ -970,6 +970,10 @@ q:before {
 q:after {
     content: close-quote;
 }
+quote {
+    display: block;
+    margin-left: 1em;
+}
 ref {
     display: inline;
     color: blue;
